KNOX-3441: Change PolicyCheckRequest to a multi-resource shape and update JdbcDelegationPolicyService per-resource semantics
PolicyCheckRequest.requestedResource (String) is now requestedResources
(Set<String>), with the same null-safe defensive-copy pattern as
requestedScopes. JdbcDelegationPolicyService.evaluate() now loops over
the requested resources, checking membership and scope compliance
independently for each one. A request with scopes but no resources is
denied with "scope_not_allowed", since a scope can only be validated
against a specific resource's allowed set; a request with no resources
and no scopes imposes no restriction, leaving the actor/headless/user/
group checks unaffected.

Test coverage:
- Updated the 18 existing JdbcDelegationPolicyServiceTest evaluate()
  tests, the DelegationPolicyServiceFactoryTest empty-service test, and
  the PolicyCheckRequestTest immutability test to the new constructor
  shape (assertions unchanged).
- Added PolicyCheckRequestTest#testPolicyCheckRequestResourcesFieldIsImmutable,
  covering both defensive copy (mutating the caller's input set doesn't
  affect the returned set) and post-construction immutability.
- Added 7 new JdbcDelegationPolicyServiceTest cases covering multi-resource
  authorization/denial, per-resource scope enforcement, and the three
  empty-requestedResources/requestedScopes interaction cases (authorized
  when both empty, still subject to actor/user checks, denied when scopes
  are requested without resources).
- gateway-spi and gateway-server full test suites pass (782 tests, 0
  failures, 1 pre-existing skip).